# markit

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/workflows/: release.yml
docs/: roadmap.md
src/: cli.rs  clipboard_provider.rs  command_runner.rs  main.rs  models.rs  storage.rs  ui.rs
src/commands/: copy.rs  delete.rs  edit.rs  export.rs  helper.rs  import.rs  list.rs  mod.rs  restore.rs  run.rs  save.rs  show.rs
src/file/: editor.rs  mod.rs  reader.rs  writer.rs
src/input/: cli_save.rs  mod.rs
src/storage/: file_storage.rs  filter.rs  mod.rs
src/ui/: cli_confirm.rs  cli_selection.rs  cli_table.rs  mod.rs
