[package]
name = "cli-snippet-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
dirs = "5"
comfy-table = "=7.1.4"
nucleo-matcher = "0.3.1"
dialoguer = "0.11"
arboard = "3.3"
