[package]
name = "markit"
version = "0.1.0"
edition = "2024"
description = "A terminal snippet manager."
license = "MIT"
repository = "https://github.com/Nightstack/cli-snippet-manager"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
dirs = "5"
comfy-table = "=7.1.4"
nucleo-matcher = "0.3.1"
dialoguer = "0.11"
arboard = "3.3"
tempfile = "3.20.0"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "markit"
path = "src/main.rs"
