[package]
name = "markit"
version = "1.1.8"
edition = "2024"
authors = ["Ryan Palmer <rpalmer9696@gmail.com>"]
description = "A terminal snippet manager."
license = "MIT"
repository = "https://github.com/Nightstack/markit"
homepage = "https://github.com/Nightstack/markit"
categories = ["command-line-utilities"]
keywords = ["cli", "snippets", "shell"]
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
dirs = "5"
comfy-table = "=7.1.4"
nucleo-matcher = "0.3.1"
dialoguer = "0.11"
arboard = "3.3"
tempfile = "3.20.0"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "markit"
path = "src/main.rs"
